Pivot to Search-First Architecture with Production-Style DAC and Unified Metadata